--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,3 +1,23 @@
+@phdthesis{MIT:StatZero,
+    author       = {Salil Pravin Vadhan},
+    school       = {Massachusetts Institute of Technology},
+    title        = {A Study of Statistical Zero-Knowledge Proofs},
+    year         = 1999,
+    month        = {September},
+    url          = {http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.70.4056},
+}
+
+@unpublished{CM:CryptoNotes,
+    author       = {Manuel Blum and Steven Rudich and Ryan Williams and Yinmeng Zhang},
+    institution  = {Carneige Mellon University},
+    howpublished = {Lecture Notes},
+    year         = 2006,
+    title        = {Introduction to Theoretical Cryptography},
+    url          = {http://www.cs.cmu.edu/~ryanw/crypto/},
+}
+
+
+
 @manual{AMS:doc,
 	title = {{User's Guide for the \texttt{amsmath} Package (Version~2.0)}},
 	organization = {American Mathematical Society},
