--- a/bibliography.bib
+++ b/bibliography.bib
@@ -16,7 +16,38 @@
     url          = {http://www.cs.cmu.edu/~ryanw/crypto/},
 }
 
+@misc{SharingSurvey,
+    author       = {Amos Beimel},
+    title        = {Secret-Sharing Schemes: A Survey},
+    institution  = {Ben-Gurion University, Dept. of Computer Science},
+    howpublished = {pdf file},
+    url          = {http://www.cs.bgu.ac.il/~beimel/Papers/Survey.pdf},
+}
 
+@inproceedings{Beimel01onthe,
+    author    = {Amos Beimel and Yuval Ishai},
+    title     = {On the Power of Nonlinear Secret-Sharing},
+    booktitle = {In Conf. on Computational Complexity},
+    year      = {2001},
+    pages     = {188--202},
+    url       = {http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.14.3937},
+}
+
+@inproceedings{VerifiableSharing,
+    author    = {Benny Chor and Shafi Goldwasser and Silvio Micali and Baruch Awerbuch},
+    title     = {Verifiable Secret Sharing and Achieving Simultaneity in the Presence of Faults},
+    booktitle = {Proceedings of the 26th Annual Symposium on Foundations of Computer Science},
+    series    = {SFCS '85},
+    year      = {1985},
+    isbn      = {0-8186-0844-4},
+    pages     = {383--395},
+    numpages  = {13},
+    url       = {https://www.cs.umd.edu/~gasarch/TOPICS/secretsharing/chorVSS.pdf},
+    doi       = {10.1109/SFCS.1985.64},
+    acmid     = {1382871},
+    publisher = {IEEE Computer Society},
+    address   = {Washington, DC, USA},
+}
 
 @manual{AMS:doc,
 	title = {{User's Guide for the \texttt{amsmath} Package (Version~2.0)}},
