--- a/bibliography.bib
+++ b/bibliography.bib
@@ -49,134 +49,83 @@
     address   = {Washington, DC, USA},
 }
 
-@manual{AMS:doc,
-	title = {{User's Guide for the \texttt{amsmath} Package (Version~2.0)}},
-	organization = {American Mathematical Society},
-	note = {Materiały wewnętrzne organizacji American Mathematical Society, dostępne również w postaci źródłowej na stronie \url{http://www.ams.org}},
+@inproceedings{Yao,
+    author    = {Yao, Andrew C.},
+    title     = {Protocols for Secure Computations},
+    booktitle = {Proceedings of the 23rd Annual Symposium on Foundations of Computer Science},
+    series    = {SFCS '82},
+    year      = {1982},
+    pages     = {160--164},
+    numpages  = {5},
+    url       = {http://research.cs.wisc.edu/areas/sec/yao1982-ocr.pdf},
+    doi       = {10.1109/SFCS.1982.88},
+    acmid     = {1382751},
+    publisher = {IEEE Computer Society},
+    address   = {Washington, DC, USA},
 }
 
-@book{RC:ttk,
-	author = {Chwałowski, R.},
-	title = {Typografia typowej książki},
-	address = {Gliwice},
-	publisher = {Helion},
-	year = {2002},
-	isbn = {83-7197-545-7},
+@article{grigoriev,
+    title     = {Unconditionally secure multiparty computation and secret sharing},
+    author    = {Dima Grigoriev and Vladimir Shpilrain},
+    journal   = {preprint},
+    url       = {http://www.sci.ccny.cuny.edu/~shpil/secure_comp.pdf},
 }
 
-@manual{doc:TeXLive,
-	title = {Dokumentacja zebrana, dystrybucja \TeX{}Collection (\TeX{}Live $+$ CTAN), 2CDs\allowbreak$+$DVD},
-	organization = {DANTE e.v., Lehmanns Fachbuchhandlund},
-	edition = {9},
-	year = {2003},
+@inproceedings{Goldreich87,
+    author    = {Oded Goldreich and Silvio Micali and Avi Wigderson},
+    title     = {How to Play ANY Mental Game},
+    booktitle = {Proceedings of the Nineteenth Annual ACM Symposium on Theory of Computing},
+    series    = {STOC '87},
+    year      = {1987},
+    isbn      = {0-89791-221-7},
+    location  = {New York, New York, USA},
+    pages     = {218--229},
+    numpages  = {12},
+    url       = {http://paul.rutgers.edu/~jasperry/light-sp13/p218-goldreich.pdf},
+    doi       = {10.1145/28395.28420},
+    acmid     = {28420},
+    publisher = {ACM},
+    address   = {New York, NY, USA},
+} 
+
+@inproceedings{Chaum88,
+    author    = {David Chaum and Claude Cr{\'e}peau and Ivan Damgard},
+    title     = {Multiparty Unconditionally Secure Protocols},
+    booktitle = {Proceedings of the Twentieth Annual ACM Symposium on Theory of Computing},
+    series    = {STOC '88},
+    year      = {1988},
+    isbn      = {0-89791-264-0},
+    location  = {Chicago, Illinois, USA},
+    pages     = {11--19},
+    numpages  = {9},
+    url       = {http://www.csie.nuk.edu.tw/~cychen/quantum/OT and QOT/OT/CC/Multiparty unconditionally secure protocols.pdf},
+    doi       = {10.1145/62212.62214},
+    acmid     = {62214},
+    publisher = {ACM},
+    address   = {New York, NY, USA},
 }
 
-@book{AD:Lwpw,
-	author = {Diller, A.},
-	title = {\LaTeX{} wiersz po wierszu. Zasady i~techniki przetwarzania dokumentów},
-	address = {Gliwice},
-	publisher = {Helion},
-	year = {2001},
-	isbn = {83-7197-341-1},
-	note = {tłum. Jan Jełowiecki},
+@misc{Rabin81,
+    author    = {Michael Oser Rabin},
+    title     = {How To Exchange Secrets with Oblivious Transfer},
+    booktitle = {IACR Eprint archive},
+    url       = {http://dm.ing.unibs.it/giuzzi/corsi/Support/papers-cryptography/187.pdf},
+    year      = 1981,
 }
 
-@article{comp-sci,
-	author = {Gajęcki, M.},
-	title = {Automatyczna klasyfikacja rzeczowników do grup semantycznych na podstawie korpusu tekstów},
-	journal = {Computer Science},
-	year = {2004},
-	volume = {5},
-	pages = {27--40},
-}
-
-@book{latexCompanion,
-	author = {Goossens, M. and Mittelbach, F. and Samarin, A.},
-	title = {{The {\LaTeX} Companion}},
-	address = {USA},
-	publisher = {Addison-Wesley Publishing Company},
-	year = {1994},
-}
-
-@book{latexGraphCompanion,
-	author = {Goossens, M. and Rahtz, S. and Mittelbach, F.},
-	title = {{The {\LaTeX} Graphics Companion}},
-	address = {USA},
-	publisher = {Addison-Wesley Publishing Company},
-	year = {1997},
-}
-
-@book{BK:sw,
-	author = {Kalisz, B. [oprac.]},
-	title = {Słownik wydawcy},
-	address = {Warszawa},
-	publisher = {WNT},
-	year = {1997},
-	isbn = {83-204-2111-X},
-}
-
-@book{HK.PWD:aglatex,
-	author = {Kopka, H. and Daly, P.\,W.},
-	title = {{A Guide to \LaTeXe{} -- Document Preparation for Beginners and Advanced Users}},
-	address = {Harlow, England},
-	publisher = {Addison-Wesley Publishing Company},
-	year = {1995},
-}
-
-@book{LL:latex1,
-	author = {Lamport, L.},
-	title = {\LaTeX{} -- A~Document Preparation System},
-	address = {Menlo Park, California, USA},
-	publisher = {Digital Equipment Corporation, Addison-Wesley Publishing Company, Inc.},
-	year = {1985},
-}
-
-@book{LL:latex2,
-	author = {Lamport, L.},
-	title = {\LaTeX},
-	address = {Kraków},
-	publisher = {ŚCO Cyfronet},
-	year = {1990},
-	note = {(z~angielskiego przełożył Piotr Wyrostek)},
-}
-
-@book{LL:latex3,
-	author = {Lamport, L.},
-	title = {\LaTeX{} -- podręcznik i~przewodnik użytkownika},
-	address = {Warszawa},
-	publisher = {WNT},
-	year = {2004},
-	isbn = {83-204-2878-5},
-	note = {(tłum. Marta Wolińska, Marcin Woliński)},
-}
-
-@unpublished{EPS:sapijaszko,
-	author = {Sapijaszko, G.},
-	title = {Grafika EPS w dokumentach \TeX-owych},
-	note = {Dokument elektroniczny PDF, \url{http://www.sapijaszko.net/pedeefy.pdf}},
-}
-
-@book{AT:lpd,
-	author = {Tomaszewski, A.},
-	title = {Leksykon pism drukarskich},
-	address = {Warszawa},
-	publisher = {Wydawnictwo Krupski},
-	year = {1996},
-}
-
-@book{JT:etjo,
-	author = {Trzynadlowski, J.},
-	title = {{Edytorstwo. Tekst, język, opracowanie}},
-	address = {Warszawa},
-	publisher = {WNT},
-	year = {1983},
-}
-
-@book{UWND-AGH,
-	author = {Wichur, A. and Barszczewska-Wojda, B.},
-	title = {Zasady składu książek w~serii monografie},
-	edition = {2},
-	address = {Kraków},
-	publisher = {Wyd. AGH},
-	year = {2000},
+@inproceedings{Kilian88,
+    author    = {Joe Kilian},
+    title     = {Founding Crytpography on Oblivious Transfer},
+    booktitle = {Proceedings of the Twentieth Annual ACM Symposium on Theory of Computing},
+    series    = {STOC '88},
+    year      = {1988},
+    isbn      = {0-89791-264-0},
+    location  = {Chicago, Illinois, USA},
+    pages     = {20--31},
+    numpages  = {12},
+    url       = {http://doi.acm.org/10.1145/62212.62215},
+    doi       = {10.1145/62212.62215},
+    acmid     = {62215},
+    publisher = {ACM},
+    address   = {New York, NY, USA},
 }
