--- a/bibliography.bib
+++ b/bibliography.bib
@@ -50,7 +50,7 @@
 }
 
 @inproceedings{Yao,
-    author    = {Yao, Andrew C.},
+    author    = {Andrew C. Yao},
     title     = {Protocols for Secure Computations},
     booktitle = {Proceedings of the 23rd Annual Symposium on Foundations of Computer Science},
     series    = {SFCS '82},
@@ -128,4 +128,94 @@
     acmid     = {62215},
     publisher = {ACM},
     address   = {New York, NY, USA},
+}
+
+@inproceedings{Yao95,
+    author    = {Yao, Andrew Chi-Chih},
+    title     = {Security of Quantum Protocols Against Coherent Measurements},
+    booktitle = {Proceedings of the Twenty-seventh Annual ACM Symposium on Theory of Computing},
+    series    = {STOC '95},
+    year      = {1995},
+    isbn      = {0-89791-718-9},
+    location  = {Las Vegas, Nevada, USA},
+    pages     = {67--75},
+    numpages  = {9},
+    url       = {http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.34.2525},
+    doi       = {10.1145/225058.225085},
+    acmid     = {225085},
+    publisher = {ACM},
+    address   = {New York, NY, USA},
+} 
+
+@incollection{Bennet92,
+    author    = {Bennett, Charles H. and Brassard, Gilles and Cr{\'e}peau, Claude and Skubiszewska, Marie-H{\'e}l{\`e}ne},
+    year      = {1992},
+    isbn      = {978-3-540-55188-1},
+    booktitle = {Advances in Cryptology — CRYPTO ’91},
+    volume    = {576},
+    series    = {Lecture Notes in Computer Science},
+    editor    = {Feigenbaum, Joan},
+    doi       = {10.1007/3-540-46766-1_29},
+    title     = {Practical Quantum Oblivious Transfer},
+    publisher = {Springer Berlin Heidelberg},
+    pages     = {351-366},
+}
+
+@incollection{Damgard09,
+    author    = {Damg\r{a}rd, Ivan and Fehr, Serge and Lunemann, Carolin and Salvail, Louis and Schaffner, Christian},
+    year      = {2009},
+    isbn      = {978-3-642-03355-1},
+    booktitle = {Advances in Cryptology - CRYPTO 2009},
+    volume    = {5677},
+    series    = {Lecture Notes in Computer Science},
+    editor    = {Halevi, Shai},
+    doi       = {10.1007/978-3-642-03356-8_24},
+    title     = {Improving the Security of Quantum Protocols via Commit-and-Open},
+    url       = {http://dx.doi.org/10.1007/978-3-642-03356-8_24},
+    publisher = {Springer Berlin Heidelberg},
+    pages     = {408-427},
+}
+
+
+@article{Mayers97,
+    author  = {Dominic Mayers and Universit\'{e} De Montr\'{e}al},
+    title   = {Unconditionally Secure Quantum Bit Commitment is Impossible},
+    journal = {Rev. Lett},
+    year    = {1997},
+    pages   = {3414},
+    url     = {http://arxiv.org/abs/quant-ph/9605044},
+}
+
+@misc{Brassard97,
+    author = {Gilles Brassard and Claude Cr\'{e}peau and Dominic Mayers and Louis Salvail},
+    title  = {A brief review on the impossibility of quantum bit commitment},
+    year   = {1997},
+    url    = {http://arxiv.org/abs/quant-ph/9712023},
+}
+
+
+@article{Chiribella2013,
+    author  = {Giulio Chiribella and Giacomo Mauro D'Ariano and Paolo Perinotti and Dirk Schlingemann and Reinhard Werner},
+    title   = {A short impossibility proof of quantum bit commitment},
+    journal = {Physics Letters A},
+    volume  = {377},
+    number  = {15},
+    pages   = {1076 -- 1087},
+    year    = {2013},
+    url     = {http://arxiv.org/abs/0905.3801},
+    doi     = {http://dx.doi.org/10.1016/j.physleta.2013.02.045},
+}
+
+
+@article{Lo98,
+    author  = {Hoi-Kwong Lo and H.F. Chau},
+    title   = {Why quantum bit commitment and ideal quantum coin tossing are impossible},
+    journal = {Physica D: Nonlinear Phenomena},
+    volume  = {120},
+    number  = {1–2},
+    pages   = {177 -- 187},
+    year    = {1998},
+    note    = {Proceedings of the Fourth Workshop on Physics and Consumption },
+    doi     = {http://dx.doi.org/10.1016/S0167-2789(98)00053-0},
+    url     = {http://arxiv.org/abs/quant-ph/9711065},
 }
